<!-- 
/*
 * Copyright (C) 2013 The Serval Project
 * Portions Copyright (C) 2012, 2013 The MaGDAA Project
 *
 * This file is part of the Serval SAM Software, a fork of the MaGDAA SAM software
 * which is located here: https://github.com/magdaaproject/survey-acquisition-management
 *
 * Serval SAM Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
/*
 * Copyright (C) 2012, 2013 The MaGDAA Project
 *
 * This file is part of the MaGDAA SAM Software
 *
 * MaGDAA SAM Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- sharing preferences -->
	<PreferenceCategory 
	    android:title="@string/preferences_sharing_title"
		android:key="preferences_sharing">
		
	<CheckBoxPreference
	        android:key="preferences_sharing_bundles"
	        android:title="@string/preferences_sharing_bundles_title"
	        android:summary="@string/preferences_sharing_bundles_description"
	        android:defaultValue="true" />
	
	<CheckBoxPreference
	        android:key="preferences_sharing_rhizome"
	        android:title="@string/preferences_sharing_rhizome_title"
	        android:summary="@string/preferences_sharing_rhizome_description"
	        android:defaultValue="true"
	        android:dependency="preferences_sharing_bundles" />
		
	</PreferenceCategory>
	
	<!-- config preferences -->
	<PreferenceCategory 
	    android:title="@string/preferences_config_title"
		android:key="preferences_config">
	
	    <Preference android:title="@string/preferences_view_config_title" >
		    <intent
		        android:targetPackage="org.servalproject.sam"
		        android:targetClass="org.magdaaproject.sam.ConfigManagerActivity" />
		</Preference>
	    
	</PreferenceCategory>
    

</PreferenceScreen>