<!-- 
/*
 * Copyright (C) 2013 The Serval Project
 * Portions Copyright (C) 2012, 2013 The MaGDAA Project
 *
 * This file is part of the Serval SAM Software, a fork of the MaGDAA SAM software
 * which is located here: https://github.com/magdaaproject/survey-acquisition-management
 *
 * Serval SAM Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
/*
 * Copyright (C) 2012, 2013 The MaGDAA Project
 *
 * This file is part of the MaGDAA SAM Software
 *
 * MaGDAA SAM Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ff111111" >
    
    <!-- header -->
    <TextView
        android:id="@+id/launcher_ui_lbl_header"
        style="@style/ui_elem_header"
        android:text="@string/launcher_ui_lbl_header" />
    
    <!-- list of form categories -->
    <ListView
        android:id="@+id/launcher_ui_list_categories"
        android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/launcher_ui_lbl_header"
		android:layout_margin="@dimen/ui_elem_margin_top"
		android:layout_above="@+id/launcher_ui_btn_manage_inreach">
    </ListView>
    
    <!-- device id -->
    <TextView
        android:id="@+id/launcher_ui_lbl_device_id"
        style="@style/ui_elem_sub_header_1"
        android:layout_alignParentBottom="true" />
     
    <Button
        android:id="@+id/launcher_ui_btn_view_queue"
        style="@style/ui_elem_btn_border_red"
        android:layout_above="@id/launcher_ui_lbl_device_id"
        android:layout_width="fill_parent"
		android:contentDescription="View Message Queue"
        android:text="View Message Queue"
        />
    
    
    <!-- buttons -->
    <Button
        android:id="@+id/launcher_ui_btn_update_forms"
        style="@style/ui_elem_btn_border_red"
        android:layout_above="@id/launcher_ui_btn_view_queue"
        android:layout_alignParentLeft="true"
        android:contentDescription="Update Forms"
        android:text="@string/launcher_ui_btn_update_forms"
        />
    
     <Button
        android:id="@+id/launcher_ui_btn_manage_inreach"
        style="@style/ui_elem_btn_border_red"
        android:layout_above="@id/launcher_ui_btn_view_queue"
        android:layout_alignParentRight="true"
        android:contentDescription="Manage inReach"
        android:text="@string/launcher_ui_btn_manage_inreach"
        />
     
<!-- style="@android:style/ui_elem_btn_border_red" -->

     <ProgressBar
         android:id="@+id/check_if_connected_to_inreach"
         style="@android:style/Widget.ProgressBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/launcher_ui_btn_view_queue"
         android:layout_centerInParent="true"
         />
     
</RelativeLayout>