<!-- 
/*
 * Copyright (C) 2013 The Serval Project
 * Portions Copyright (C) 2012, 2013 The MaGDAA Project
 *
 * This file is part of the Serval SAM Software, a fork of the MaGDAA SAM software
 * which is located here: https://github.com/magdaaproject/survey-acquisition-management
 *
 * Serval SAM Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
/*
 * Copyright (C) 2012, 2013 The MaGDAA Project
 *
 * This file is part of the MaGDAA SAM Software
 *
 * MaGDAA SAM Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ff111111" >
    
    <!-- header -->
    <TextView
        android:id="@+id/survey_forms_ui_lbl_header"
        android:layout_weight="10"
        style="@style/ui_elem_header" />
    
    <!-- no forms available label -->
    <TextView
        android:id="@+id/survey_forms_ui_lbl_no_forms"
        style="@style/ui_elem_sub_header_1"
        android:layout_weight="50"
        android:text="@string/survey_forms_ui_lbl_no_forms"
        android:visibility="gone" />
    
    <!-- list view -->
    <ListView
        android:id="@+id/survey_ui_list_surveys"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
		android:layout_weight="50"
		android:layout_margin="@dimen/ui_elem_margin_top" >
    </ListView>
    
    <TextView
        android:id="@+id/survey_forms_ui_csv_data"
        style="@style/ui_elem_sub_header_1"
        android:text="No CSV data loaded"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="50"
        android:gravity="left|top"
        android:scrollHorizontally="true"
        android:scrollbars="vertical"
        android:maxLines = "999"
    />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="-10"
        android:gravity="center"        
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        >
    <!-- buttons -->
    <Button
        android:id="@+id/general_ui_btn_back"
        style="@style/ui_elm_btn_back"    
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"          
        android:contentDescription="@string/general_ui_btn_back_desc"
        android:visibility="gone"
        android:text="@string/general_ui_btn_back_text"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"          
        android:id="@+id/getcsv"        
        android:text="Get CSV" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"          
        android:id="@+id/getxml"  
        android:visibility="gone"     
        android:text="Get XML" />
   </LinearLayout>
</LinearLayout>